# rusty-bots

./: .gitignore  Makefile  build-release.sh  build.sh  run_server.sh
bots-lib/: Cargo.toml
bots_lib/: Cargo.toml
bots_lib/src/: creep.rs  game.rs  lib.rs  location.rs  map.rs  memory.rs
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs  plugin_handler.rs  user.rs
user1/: Cargo.toml
user1/src/: lib.rs
