[package]
name = "client"
version = "0.1.0"
authors = ["Noah Peeters <noah.peeters@icloud.com>"]

[dependencies]
piston2d-drag_controller = "0.14.0"
piston-ai_behavior = "0.15.0"
piston2d-sprite = "0.27.0"
piston_window = "0.50.0"
find_folder = "0.3.0"
uuid = "0.1.17"
gfx = "0.12.0"

[dependencies.bots_lib]
path = "../bots_lib"
version = "*"
